kubernets/deployment/addons/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: principal-ingress2
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: spaceland-front-svc
      port:
        number: 80
  rules:
  - host: yo.ensemspace.land
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spaceland-front-svc
            port:
              number: 80
  tls:
  - hosts:
    - "yo.ensemspace.land"
    secretName : spaceland-certificate2
